--- a/style.css
+++ b/style.css
@@ -6,20 +6,24 @@
     --main_text_color: #000000;
 }
 
+* { 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--background_color);
-    width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    width: 100vw;
 }
 
 header {
     display: flex;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 80px;
+    margin-right: 80px;
     margin-top: 30px;
-    margin-bottom: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -50,6 +54,7 @@ nav a:hover {
 main {
     display: flex;
     width: 100%;
+    margin-top: 80px;
     margin-left: 80px;
     margin-right: 80px;
     margin-bottom: 50px;
@@ -57,19 +62,32 @@ main {
 
 .information_section{
     width: 60%;
+    margin-right: 25px;
 }
-.image_area {
+
+aside {
     width: 40%;
-    padding-left: 20%;
-    margin-right: 50px;
+    margin-right: 160px;
+    margin-left: 25px;
     display: flex;
     justify-content: end;
 }
-.quarter_shape_img { 
+
+.image-container {
+    width: 367px;
+    height: 320px;
+    border-radius: 0 0 0 45%; 
+    background-color: var(--highlight_color); 
+    margin-top: 32px;
+}
+
+.quarter_shape_img {
     border-radius: 0 0 0 45%; 
     width: 350px;
     height: 350px;
-    margin-right: 80px;
+    position:relative;
+    bottom: 31px;
+    left: 18px; 
 }
 
 #secondary_text{
@@ -102,18 +120,25 @@ h1 {
     color: var(--highlight_color);
 }
 
-@media screen and (min-width: 1600px) {
-    header {
-        margin-right: 90px;
+/*@media screen and (min-width: 1600px) {
+    .image-container {
+        width: 367px;
+        height: 320px;
     }
-    .quarter_shape_img{
-        margin-right: 120px;
+    
+    .quarter_shape_img {
+        width: 350px;
+        height: 350px;
     }
-}
-@media screen and (min-width: 1187px) {
+}*/
+/*@media screen and (min-width: 1187px) {
     main{
         margin-left: 5%;
         margin-right: 5%;
+    }
+    .image-container {
+        width: 46vw;
+        max-width: 420px;
     }
     .quarter_shape_img { 
         width: 46vw;
@@ -121,30 +146,36 @@ h1 {
         max-width: 420px;
         max-height: 420px;
     }
-    .image_area {
-        width: 46vw;
-        max-width: 420px;
-    }
-}
+}*/
 
-@media screen and (max-width: 627px) {
+@media screen and (max-width: 712px) {
     main{
         display: block;
-        margin-left: 15%;
-        margin-right: 15%;
+        margin-left: auto;
+        margin-right: auto;
+        width: 42em;
     }
-    .image_area {
+
+    .information_section{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    aside {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .image-container {
         margin-top: 0px;
         display: flex;
         justify-content:center;
+        width: 367px;
+        height: 320px;
     }
     .quarter_shape_img { 
-        width: 60vw;
-        height: 60vw;
-    }
-    header {
-        margin-left: 15%;
-        margin-right: 15%;
+        width: 350px;
+        height: 350px;
     }
 }
 
